--- a/styles/style.css
+++ b/styles/style.css
@@ -1,20 +1,31 @@
-.navbar {
-    display: flex; 
-    justify-content: space-between; 
-    background-color: #333;
+body {
+    height: 90vh;
+    background-color: grey;
   }
-  
-.navbar a {
+
+  .navbar {
+    display: flex;
+    justify-content: left; /* Center the navbar */
+    width: 100%;
+    text-align: left;
+  }
+  .navbar a {
     font-size: 26px;
     color: white;
-    text-align: center;
+    text-align: left;
     padding: 14px 16px;
     text-decoration: none;
-}
-.dropdown {
+    border: 1px solid black;
+  }
+  
+  .dropdown {
     position: relative;
-}
-.dropdown .dropbtn {
+    text-align: left;
+    background-color: #333;
+    border: 3px solid black;
+  }
+  
+  .dropdown .dropbtn {
     font-size: 26px;
     border: none;
     outline: none;
@@ -23,30 +34,34 @@
     background-color: inherit;
     font-family: inherit;
     margin: 0;
-}
-.navbar a:hover,
-.dropdown:hover .dropbtn {
-    background-color: red;
-}
+  }
   
-.dropdown-content {
+  .navbar a:hover,
+  .dropdown:hover .dropbtn {
+    background-color: rgb(0, 0, 0);
+  }
+  
+  .dropdown-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
-}
-.dropdown-content a {
+  }
+  
+  .dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
-}
-.dropdown-content a:hover {
+  }
+  
+  .dropdown-content a:hover {
     background-color: #ddd;
-}
-.dropdown:hover .dropdown-content {
+  }
+  
+  .dropdown:hover .dropdown-content {
     display: block;
-}
+  }
