--- a/styles/about.css
+++ b/styles/about.css
@@ -107,3 +107,15 @@ body {
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
+p{
+  text-align: center;
+  font-size: 18px;
+}
+
+.photo{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
