--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,5 +1,20 @@
+@keyframes bc{
+   from {background-image: url(../images/back1.png);}
+   to {background-image: url(../images/back2.png);}
+
+}
 body{
-    background-color: rgb(145, 127, 127);
+    background-image: url(../images/back1.png);
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    animation-name: bc;
+    animation-duration: 50s;
+   animation-delay: 5s;
+   animation-play-state: running;
+   animation-iteration-count: infinite;
+   animation-fill-mode: both;
 }
 h1{
     text-align: center;
@@ -70,16 +85,16 @@ h1{
   }
 
   .card{
-   
+
   height: 45vh;
   width: 30vh;
-  background-image: linear-gradient(to bottom, rgb(136, 136, 136), gray ,gray );
  justify-content: center;
   margin: 150px;
   float: left;
   outline-style:solid;
   outline-width: 5px;
-  outline-color: rgb(124, 124, 124);
+  background-color: whitesmoke;
+  outline-color: black;
   vertical-align: top;
     display: inline-block;
     text-align: center;
