--- a/styles/about_us.css
+++ b/styles/about_us.css
@@ -1,10 +1,26 @@
+@keyframes bc{
+  from {background-image: url(../images/back1.png);}
+  to {background-image: url(../images/back2.png);}
+
+}
 body {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 90vh;
-  background-color: grey;
+  margin-top: 28px;
+  background-image: url(../images/back1.png);
+   height: 100%;
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
+   animation-name: bc;
+   animation-duration: 50s;
+  animation-delay: 5s;
+  animation-play-state: running;
+  animation-iteration-count: infinite;
+  animation-fill-mode: both;
 }
 
 .container {
