--- a/styles/home.css
+++ b/styles/home.css
@@ -1,13 +1,22 @@
 @keyframes bc{
     from {background-image: url(../images/back1.png);}
     to {background-image: url(../images/back2.png);}
- 
+ }
+ @keyframes title{
+    from{opacity: 0 ;}
+    to{opacity: 1;}
+ }
+ @keyframes title2{
+    from{opacity: 1 ;}
+    to{opacity: 0;}
  }
  body{
+    
      background-image: url(../images/back1.png);
      height: 100vh;
+     width: 100vw;
      background-position: center;
-     background-repeat: no-repeat;
+     background-repeat: repeat;
      background-size: cover;
      animation-name: bc;
      animation-duration: 50s;
@@ -15,11 +24,9 @@
     animation-play-state: running;
     animation-iteration-count: infinite;
     animation-fill-mode: both;
+
  }
- h1{
-     text-align: center;
-     font-size: 400%;
- }
+
    .navbar {
      display: flex;
      justify-content: left; 
@@ -82,4 +89,55 @@
    
    .dropdown:hover .dropdown-content {
      display: block;
+   }
+
+   .main {
+    display: flex;
+    text-align: center;
+    display: inline-block;
+    height: 100vh;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+   }
+
+   .un {
+    border-bottom: 5px solid black;
+  }
+
+   .p{
+    width: 50vw;
+    margin-left: 25vw;
+   }
+
+   .p:hover{
+    border: solid 5px black;
+    background-color: rgb(211, 193, 193);
+    transform: scale(1.5);
+   }
+
+   #ut{
+    background-color: white;
+    border: solid 5px black;
+    height: 60px;
+    width: 350px;
+    margin-left: 41vw;
+    font-size: larger;
+   }
+
+   .pic{
+    height: 200px;
+    width: 200px;
+   }
+   #tt{
+    opacity:0 ;
+    animation-name: title;
+    animation-delay: 2s;
+    animation-duration: 5s;
+    animation-fill-mode:forwards;
+   }
+   #ft{
+    opacity:0 ;
+    animation-name: title2;
+    animation-duration: 8s;
    }
