--- a/styles/home.css
+++ b/styles/home.css
@@ -15,9 +15,10 @@
      background-image: url(../images/back1.png);
      height: 100vh;
      width: 100vw;
-     background-position: center;
-     background-repeat: repeat;
+     background-position: fixed;
+     background-repeat: no-repeat;
      background-size: cover;
+     background-attachment: fixed;
      animation-name: bc;
      animation-duration: 50s;
     animation-delay: 5s;
